data/Themes.css
/*
* Copyright (c) 2017-2024 Lains
* Copyright (c) 2025 Stella (teamcons on GitHub) and the Ellie_Commons community
*
* This program is free software; you can redistribute it and/or
* modify it under the terms of the GNU General Public
* License as published by the Free Software Foundation; either
* version 2 of the License, or (at your option) any later version.
*
* This program is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
* General Public License for more details.
*
* You should have received a copy of the GNU General Public
* License along with this program; if not, write to the
* Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
* Boston, MA 02110-1301 USA
*/

.BLUEBERRY:root {
    --accent_color_100: @BLUEBERRY_100;
    --accent_color_300: @BLUEBERRY_300;
    --accent_color_500: @BLUEBERRY_500;
    --accent_color_700: @BLUEBERRY_700;
    --accent_color_900: @BLUEBERRY_900;
    --accent_color: mix(@BLUEBERRY_300, @BLUEBERRY_500, 0.25);
}

.MINT:root {
    --accent_color_100: @MINT_100;
    --accent_color_300: @MINT_300;
    --accent_color_500: @MINT_500;
    --accent_color_700: @MINT_700;
    --accent_color_900: @MINT_900;
    --accent_color: mix(@MINT_300, @MINT_500, 0.25);
}


.LIME:root {
    --accent_color_100: @LIME_100;
    --accent_color_300: @LIME_300;
    --accent_color_500: @LIME_500;
    --accent_color_700: @LIME_700;
    --accent_color_900: @LIME_900;
    --accent_color: mix(@LIME_300, @LIME_500, 0.25);
}

.BANANA:root {
    --accent_color_100: @BANANA_100;
    --accent_color_300: @BANANA_300;
    --accent_color_500: @BANANA_500;
    --accent_color_700: @BANANA_700;
    --accent_color_900: @BANANA_900;
    --accent_color: mix(@BANANA_300, @BANANA_500, 0.25);
}

.ORANGE:root {
    --accent_color_100: @ORANGE_100;
    --accent_color_300: @ORANGE_300;
    --accent_color_500: @ORANGE_500;
    --accent_color_700: @ORANGE_700;
    --accent_color_900: @ORANGE_900;
    --accent_color: mix(@ORANGE_300, @ORANGE_500, 0.25);
}

.STRAWBERRY:root {
    --accent_color_100: @STRAWBERRY_100;
    --accent_color_300: @STRAWBERRY_300;
    --accent_color_500: @STRAWBERRY_500;
    --accent_color_700: @STRAWBERRY_700;
    --accent_color_900: @STRAWBERRY_900;
    --accent_color: mix(@STRAWBERRY_300, @STRAWBERRY_500, 0.25);
}

.BUBBLEGUM:root {
    --accent_color_100: @BUBBLEGUM_100;
    --accent_color_300: @BUBBLEGUM_300;
    --accent_color_500: @BUBBLEGUM_500;
    --accent_color_700: @BUBBLEGUM_700;
    --accent_color_900: @BUBBLEGUM_900;
    --accent_color: mix(@BUBBLEGUM_300, @BUBBLEGUM_500, 0.25);
}

.GRAPE:root {
    --accent_color_100: @GRAPE_100;
    --accent_color_300: @GRAPE_300;
    --accent_color_500: @GRAPE_500;
    --accent_color_700: @GRAPE_700;
    --accent_color_900: @GRAPE_900;
    --accent_color: mix(@GRAPE_300, @GRAPE_500, 0.25);
}

.COCOA:root {
    --accent_color_100: @COCOA_100;
    --accent_color_300: @COCOA_300;
    --accent_color_500: @COCOA_500;
    --accent_color_700: @COCOA_700;
    --accent_color_900: @COCOA_900;
    --accent_color: mix(@COCOA_300, @COCOA_500, 0.25);
}

.SLATE:root {
    --accent_color_100: @SLATE_100;
    --accent_color_300: @SLATE_300;
    --accent_color_500: @SLATE_500;
    --accent_color_700: @SLATE_700;
    --accent_color_900: @SLATE_900;
    --accent_color: mix(@SLATE_300, @SLATE_500, 0.25);
}

.LATTE:root {
    --accent_color_100: @LATTE_100;
    --accent_color_300: @LATTE_300;
    --accent_color_500: @LATTE_500;
    --accent_color_700: @LATTE_700;
    --accent_color_900: @LATTE_900;
    --accent_color: mix(@LATTE_300, @LATTE_500, 0.25);
}

window.themed {
    background-color: var(--accent_color_100);
}

window.themed undershoot.top {
    background:
        linear-gradient(
            var(--accent_color_100) 0%,
            alpha(var(--accent_color_100), 0) 50%
        );
}

window.themed undershoot.bottom {
    background:
        linear-gradient(
            alpha(var(--accent_color_100), 0) 50%,
            var(--accent_color_100) 100%
        );
}

/* WEIRD: if we dont personally just redefine overshoot effect, the grey theme doesnt have any*/
window.themed overshoot.top {
    background: linear-gradient(to top, alpha(var(--accent_color), 0) 80%, alpha(var(--accent_color), 0.25) 100%);
}

window.themed overshoot.right {
    background: linear-gradient(to right, alpha(var(--accent_color), 0) 80%, alpha(var(--accent_color), 0.25) 100%);
}

window.themed overshoot.bottom {
    background: linear-gradient(to bottom, alpha(var(--accent_color), 0) 80%, alpha(var(--accent_color), 0.25) 100%); 
}

window.themed overshoot.left {
    background: linear-gradient(to left, alpha(var(--accent_color), 0) 80%, alpha(var(--accent_color), 0.25) 100%);
}

window.themed text selection {
    color: shade(var(--accent_color_100), 1.88);
    background-color: var(--accent_color_900);
}

window.themed titlebar,
window.themed titlebar image,
window.themed .themedbutton > button > box > image,
window.themed .themedbutton > image,
window.themed {
    color: var(--accent_color_900);
}

window.themed titlebar,
window.themed textview,
window.themed editablelabel.editing {
    background-color: transparent;
    border-bottom-color: var(--accent_color_100);
    color: shade(var(--accent_color_900), 0.77);
}

/* Fix the emoticon entry having note color background */
window.themed entry {
    background-color: white;
    color: black;
}

window.themed editablelabel {
    color: var(--accent_color_900);
}

window.themed editablelabel:hover,
window.themed editablelabel:focus {
    border: 1px solid alpha(var(--accent_color),0.88);
}

window.themed editablelabel.editing {
    border: 1px solid var(--accent_color_700);
}

window.themed:backdrop editablelabel {
    color: alpha(var(--accent_color_900), 0.75);
}

window.themed:backdrop editablelabel,
window.themed:backdrop actionbar,
window.themed:backdrop actionbar image {
    color: alpha(var(--accent_color_900), 0.65);
}

